--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,43 @@
+*, *:before, *:after {
+  box-sizing: border-box;
+}
+
 body {
   background-color: white;
 }
 
-h1 {
-  text-align: center;
+.container {
+  position: relative;
 }
 
+.menu {
+  position: absolute;
+  background-image: url('../assets/bg-beach.jpg');
+  background-size: 100%;
+  height: 500px;
+  width: 800px;
+  display: block;
+  text-align: center;
+  font-family: 'Chelsea Market', cursive;
+  font-size: 2em;
+}
+
+h1 {
+  text-align: center;
+  margin-top: 20%;
+  color: white;
+  text-shadow: 1px 1px 2px #000000;
+}
+
+h2 {
+  text-align: center;
+  color: white;
+  text-shadow: 1px 1px 2px #000000;
+}
+
+
 #canvas {
+  position: absolute;
   height: 500px;
   width: 800px;
   border: 1px solid black;
