--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body {
 
 .menu {
   position: absolute;
-  background-image: url('../assets/bg-beach.jpg');
+  background-image: url('../assets/menu-bg-beach.jpg');
   background-size: 100%;
   height: 500px;
   width: 800px;
