--- a/css/style.css
+++ b/css/style.css
@@ -10,13 +10,12 @@ body {
   position: relative;
 }
 
-.menu {
+#menu {
   position: absolute;
   background-image: url('../assets/menu-bg-beach.jpg');
   background-size: 100%;
   height: 500px;
   width: 800px;
-  display: block;
   text-align: center;
   font-family: 'Chelsea Market', cursive;
   font-size: 2em;
