--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,3 @@
-*, *:before, *:after {
-  box-sizing: border-box;
-}
-
-body {
-  background-color: white;
-}
-
 .container {
   position: relative;
 }
@@ -13,9 +5,9 @@ body {
 #menu {
   position: absolute;
   background-image: url('../assets/menu-bg-beach.jpg');
-  background-size: 100%;
-  height: 500px;
-  width: 800px;
+  height: 100vh;
+  width: 100vw;
+/*  border: 1px solid black;*/
   text-align: center;
   font-family: 'Chelsea Market', cursive;
   font-size: 2em;
@@ -34,14 +26,23 @@ h2 {
   text-shadow: 1px 1px 2px #000000;
 }
 
-
 #canvas {
   position: absolute;
-  height: 500px;
-  width: 800px;
-  border: 1px solid black;
+  height: window.innerHeight;
+  width: window.innerWidth;
+/*  border: 1px solid black;*/
   display: block;
   margin: 0 auto;
+}
+
+#gameover {
+  position: absolute;
+  height: 100vh;
+  width: 100vw;
+  text-align: center;
+  font-family: 'Chelsea Market', cursive;
+  font-size: 2em;
+  display: none;
 }
 
 /*@media(max-width: 1200px) {
